# pyRFM

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
bib/: pyrfm.bib
docs/: conf.py  core.html  genindex.html  geometry.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  utils.html  voronoi.html  voronoi.rst
docs/.doctrees/: environment.pickle
docs/_modules/: index.html
docs/_sources/: core.rst.txt  index.rst.txt
docs/src/: conf.py  utils.rst
examples/: elasticity.py  elasticity3d.py  poisson.py  poisson_a.py  poisson_batch.py  poisson_hd.py
examples/Classic/: Elastic-1.py  Elastic-2.py  Elastic-3.py  Helmholtz-1.py  Helmholtz.py  Poisson-1.py  Poisson.py  README.md  Stokes-1.py  Stokes.py
examples/Nonlinear/: LLG.py  bgs.py  burgers.py  demo1.py
examples/Time-dependent/: Heat.py  Heat2.py  README.md  Schr ̈odinger.py  Vibration.py  Wave.py
pyrfm/: __init__.py  core.py  geometry.py  optimize.py  quad.py  utils.py  visualizer.py  voronoi.py
test/: 2dElasticity_Ⅱ.py  2dElasticity_Ⅲ_r.npy  2dElasticity_Ⅲ_xy.npy  GPEs.py  circle_2d.msh  difftool.py  draft.py  encoder.py  gmshAdaptor.py  gpe.mat  hook.py  largest-objects.sh  others1.py  others2.py  stokes_dubug.py  submit_all.sh  test.py  test_separate.py  tets.py  use_PsiA.py  use_hierarchical.py  use_interface.py  use_sdf.py  use_voronoi.py
test/LLG/: LLG-ICN1.py  LLG-SICN1.py  LLG-SICN3.py  LLG-ST1.py  LLG-ST3.py  LLG.py  LLG_ICN3.py  test.py  train_heat.py
test/Ostwald熟化模拟/: Ostwald熟化模拟.pptx  extract.py  meshPBC.h5  (+3 more)
(+227 files in other folders)
