[project]
name = "pyrfm"
version = "0.1.5"
description = "A Python package for Random Feature Method (RFM)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Yifei Sun", email = "yfsun99@stu.suda.edu.cn" }
]
dependencies = [
    "torch>=2.1.0",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "spdlog"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"